// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeInput /> renders 1`] = `
<div
  class="field field--populated"
>
  <label
    class="field__label field__label--populated"
    for="field_1"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--populated"
    id="field_1"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with a custom ID 1`] = `
<div
  class="field field--populated"
>
  <label
    class="field__label field__label--populated"
    for="foo"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--populated"
    id="foo"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with an error 1`] = `
<div
  class="field field--populated field--erroneous"
>
  <label
    class="field__label field__label--populated field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Jawn
  </label>
  <input
    aria-labelledby="field_4_label field_4_error"
    class="field__input field__input--populated field__input--erroneous"
    id="field_4"
    type="time"
    value="08:04"
  />
  <span
    class="field__error"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<TimeInput /> renders with help 1`] = `
<div
  class="field field--populated"
>
  <label
    class="field__label field__label--populated"
    for="field_5"
  >
    Jawn
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
  <input
    class="field__input field__input--populated"
    id="field_5"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with inline 1`] = `
<div
  class="field field--inline field--populated"
>
  <label
    class="field__label field__label--inline field__label--populated"
    for="field_11"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--inline field__input--populated"
    id="field_11"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with large 1`] = `
<div
  class="field field--populated field--large"
>
  <label
    class="field__label field__label--populated field__label--large"
    for="field_9"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--populated field__input--large"
    id="field_9"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with small 1`] = `
<div
  class="field field--populated field--small"
>
  <label
    class="field__label field__label--populated field__label--small"
    for="field_10"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--populated field__input--small"
    id="field_10"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with success 1`] = `
<div
  class="field field--populated field--success"
>
  <label
    class="field__label field__label--populated field__label--success"
    for="field_6"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--populated field__input--success"
    id="field_6"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders with touched 1`] = `
<div
  class="field field--touched field--populated field--success"
>
  <label
    class="field__label field__label--touched field__label--populated field__label--success"
    for="field_7"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--touched field__input--populated field__input--success"
    id="field_7"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders without a label 1`] = `
<div
  class="field field--populated"
>
  <input
    class="field__input field__input--populated"
    id="field_2"
    type="time"
    value="08:04"
  />
</div>
`;

exports[`<TimeInput /> renders without a wrapper 1`] = `
<label
  class="field__label field__label--populated"
  for="field_3"
>
  Jawn
</label>
`;
